[tool.poetry]
name = "kings"
version = "0.1.0"
description = ""
authors = ["Arthur Koehl <avkoehl@ucdavis.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygeohydro = "^0.18.0"
pynhd = "^0.18.0"
rioxarray = "^0.18.1"
whitebox = "^2.3.5"
geopandas = "^1.0.1"
rasterio = "^1.4.2"
xarray = "^2024.10.0"
numpy = "^2.1.3"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"
jupyter = "^1.1.1"
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
